--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
       
       
       <div class="bottom-container">
+        <p><b>Address:</b> 430 McMurchy Avenue South</p>
+        <p><b>Phone Number:</b> (416) 520 - 5379</p>
         <p>© 2022 Eddison Pham.</p>
       </div>
 </body>
