--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             
             <img class="python-img" src="images/python.png" alt="python">
             <h3>Python ★★★★☆</h3>
-            <p>I have been programming and taking courses on Python for 7 months. I have created 20+ projects within the span of those months. Some of the skills I have attained in this programming language are OOP, API requests, HTML/CSS and JSON.</p>
+            <p>I have been programming and taking courses on Python for 7 months. Some of the skills I have attained in this programming language are OOP, API requests, HTML/CSS and JSON.</p>
             </div>
 
           <div class="skill-row">
             <img class="java-img" src="images/java.png" alt="java">
             <h3>Java ★★★★☆</h3>
-            <p>Java is one of the programming languages I learned in school. I have 6 months programming experience in Java and have created 30+ projects within those spans. Some of the skills I have attained in this programming language are Recursion, Backtracking, Stacks, Binary Trees and GUIs.</p>
+            <p>Java is one of the programming languages I learned in school. I have written over 20,000 lines of Java code in the past 6 months I have known the language for. Some of the skills I have attained in this programming language are Recursion, Backtracking, Stacks, Binary Trees and GUIs.</p>
             </div>
 
           <div class="skill-row">
